# sina

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE-MIT  README.md  TODO.md
examples/: Cargo.toml  README.md
examples/output/: README.md
examples/src/: basic_shapes.rs  benchmark.rs  complex_shapes.rs  multi_font.rs  multilingual.rs  test_metrics.rs  text_samples.rs  vector_paths.rs
examples/src/misc/: benchmark.rs  font_formats.rs  test_metrics.rs
examples/src/shapes/: basic_shapes.rs  complex_shapes.rs  gradients.rs  patterns.rs  polygons.rs  vector_paths.rs
examples/src/text/: debug_text.rs  emoji.rs  multi_font.rs  multilingual.rs  text_rendering.rs  text_samples.rs
sina-core/: Cargo.toml
sina-core/src/: color.rs  geometry.rs  lib.rs  paint.rs  path.rs  surface.rs
sina-core/src/cpu/: mod.rs  surface.rs
sina-core/src/effects/: mod.rs
sina-core/src/gpu/: mod.rs
sina-core/src/text/: bitmap.rs  emoji.rs  font.rs  glyph.rs  layout.rs  mod.rs  variable.rs
sina-core/tests/: integration_tests.rs
