[package]
name = "sina-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_shapes"
path = "src/basic_shapes.rs"

[[bin]]
name = "text_rendering"
path = "src/text_rendering.rs"

[[bin]]
name = "font_formats"
path = "src/font_formats.rs"

[[bin]]
name = "vector_paths"
path = "src/vector_paths.rs"

[[bin]]
name = "complex_shapes"
path = "src/complex_shapes.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
sina = { path = "../sina-core" }
