[package]
name = "sina-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_shapes"
path = "src/basic_shapes.rs"

[[bin]]
name = "text_rendering"
path = "src/text_rendering.rs"

[[bin]]
name = "font_formats"
path = "src/font_formats.rs"

[[bin]]
name = "vector_paths"
path = "src/vector_paths.rs"

[[bin]]
name = "complex_shapes"
path = "src/complex_shapes.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "text_samples"
path = "src/text_samples.rs"

[[bin]]
name = "multi_font"
path = "src/multi_font.rs"

[[bin]]
name = "multilingual"
path = "src/multilingual.rs"

[[bin]]
name = "debug_text"
path = "src/debug_text.rs"

[[bin]]
name = "test_metrics"
path = "src/test_metrics.rs"

[dependencies]
sina = { path = "../sina-core" }
