[package]
name = "sina-examples"
version = "0.1.1"
edition = "2021"

# Shape Examples
[[bin]]
name = "basic_shapes"
path = "src/shapes/basic_shapes.rs"

[[bin]]
name = "vector_paths"
path = "src/shapes/vector_paths.rs"

[[bin]]
name = "complex_shapes"
path = "src/shapes/complex_shapes.rs"

[[bin]]
name = "gradients"
path = "src/shapes/gradients.rs"

[[bin]]
name = "patterns"
path = "src/shapes/patterns.rs"

[[bin]]
name = "polygons"
path = "src/shapes/polygons.rs"

# Text Examples
[[bin]]
name = "text_rendering"
path = "src/text/text_rendering.rs"

[[bin]]
name = "text_samples"
path = "src/text/text_samples.rs"

[[bin]]
name = "multi_font"
path = "src/text/multi_font.rs"

[[bin]]
name = "multilingual"
path = "src/text/multilingual.rs"

[[bin]]
name = "debug_text"
path = "src/text/debug_text.rs"

# Misc Examples
[[bin]]
name = "benchmark"
path = "src/misc/benchmark.rs"

[[bin]]
name = "font_formats"
path = "src/misc/font_formats.rs"

[[bin]]
name = "test_metrics"
path = "src/misc/test_metrics.rs"

[dependencies]
sina = { path = "../sina-core" }
rustybuzz = { workspace = true }
