[package]
name = "sina"
version = "0.1.1"
edition = "2021"
authors = ["Grandpa EJ <>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrandpaEJ/sina"
documentation = "https://docs.rs/sina"
homepage = "https://github.com/GrandpaEJ/sina"
readme = "../README.md"
description = "A modern 2D graphics rendering engine written in pure Rust, inspired by Skia"
keywords = ["graphics", "rendering", "2d", "canvas", "skia"]
categories = ["graphics", "rendering", "game-development"]

[dependencies]
# Vector Graphics & Tessellation
lyon_path = { workspace = true }
lyon_tessellation = { workspace = true }

# Mathematics
glam = { workspace = true }

# 2D Rasterization
raqote = { workspace = true }

# GPU Backend
wgpu = { workspace = true }
bytemuck = { workspace = true }

# Text Rendering
ttf-parser = { workspace = true }
fontdue = { workspace = true }
rustybuzz = { workspace = true }
unicode-bidi = { workspace = true }

# Image I/O
image = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Error Handling
thiserror = { workspace = true }
log = { workspace = true }
